--- a/clock_algo/digit_classification.ipynb
+++ b/clock_algo/digit_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -12,6 +12,10 @@
     "from torchvision import transforms\n",
     "from torch.utils.data import Dataset\n",
     "from torch.utils.data import DataLoader\n",
+    "from torch.nn import CrossEntropyLoss\n",
+    "from torch.autograd import Variable\n",
+    "import torch.nn.functional as F\n",
+    "from torch import optim\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline"
@@ -19,20 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using downloaded and verified file: /Users/jtao/coco/clock_algo/train_32x32.mat\n"
+      "Using downloaded and verified file: /Users/jtao/Documents/coco/clock_algo/train_32x32.mat\n"
      ]
     }
    ],
    "source": [
     "pwd = %pwd\n",
-    "data = SVHN(pwd, download=True, transform=lambda x: transforms.Normalize([0.5], [0.5])(transforms.ToTensor()(x.convert('L'))))"
+    "data = SVHN(\n",
+    "    pwd, \n",
+    "    download=True, \n",
+    "    transform=lambda x: transforms.Normalize([0.5], [0.5])(transforms.ToTensor()(x.convert('L'))),\n",
+    ")\n",
+    "np.place(data.labels, data.labels == 10, 0)"
    ]
   },
   {
@@ -51,8 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 迭代开始，然后，队列和线程跟着也开始\n",
@@ -94,155 +105,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "   10\n",
-       "    2\n",
-       "    1\n",
-       "    2\n",
-       "    6\n",
-       "    2\n",
-       "    4\n",
-       "    7\n",
-       "    5\n",
-       "    1\n",
-       "    9\n",
-       "    3\n",
-       "    9\n",
-       "    1\n",
-       "    1\n",
-       "    3\n",
-       "    2\n",
-       "    7\n",
-       "   10\n",
-       "    2\n",
-       "    7\n",
-       "    9\n",
-       "    1\n",
-       "    3\n",
-       "    2\n",
-       "    8\n",
-       "    1\n",
-       "   10\n",
-       "   10\n",
-       "    3\n",
-       "    5\n",
-       "    4\n",
-       "    6\n",
-       "    8\n",
-       "    6\n",
-       "    7\n",
-       "    5\n",
-       "    4\n",
-       "    3\n",
-       "    3\n",
-       "    1\n",
-       "    5\n",
-       "    8\n",
-       "    1\n",
-       "   10\n",
-       "    4\n",
-       "    2\n",
-       "    5\n",
-       "    5\n",
-       "    9\n",
-       "    8\n",
-       "    4\n",
-       "    4\n",
-       "    6\n",
-       "    9\n",
-       "    6\n",
-       "    1\n",
-       "    1\n",
-       "    1\n",
-       "    2\n",
-       "   10\n",
-       "    9\n",
-       "    6\n",
-       "    1\n",
-       "    3\n",
-       "    2\n",
-       "    7\n",
-       "    4\n",
-       "    1\n",
-       "    7\n",
-       "    9\n",
-       "    8\n",
-       "    3\n",
-       "    1\n",
-       "    2\n",
-       "    7\n",
-       "    5\n",
-       "    3\n",
-       "    5\n",
-       "    1\n",
-       "   10\n",
-       "    7\n",
-       "    5\n",
-       "    3\n",
-       "    8\n",
-       "    6\n",
-       "    2\n",
-       "    1\n",
-       "    2\n",
-       "    8\n",
-       "   10\n",
-       "    6\n",
-       "    2\n",
-       "    8\n",
-       "    2\n",
-       "    8\n",
-       "    4\n",
-       "    3\n",
-       "    6\n",
-       "   10\n",
-       "[torch.ByteTensor of size 100x1]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "labels"
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class Net(nn.Module):#需要继承这个类\n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        #建立了两个卷积层，self.conv1, self.conv2，注意，这些层都是不包含激活函数的\n",
+    "        self.conv1 = nn.Conv2d(1, 6, 3) # 1 input image channel, 6 output channels, 3x3 square convolution kernel\n",
+    "        self.conv2 = nn.Conv2d(6, 16, 3)\n",
+    "        #三个全连接层\n",
+    "        self.fc1   = nn.Linear(16*6*6, 128) # an affine operation: y = Wx + b\n",
+    "        self.fc2   = nn.Linear(128, 64)\n",
+    "        self.fc3   = nn.Linear(64, 10)\n",
+    "\n",
+    "    def forward(self, x): #注意，2D卷积层的输入data维数是 batchsize*channel*height*width\n",
+    "        print(x.shape)\n",
+    "\n",
+    "        x = F.max_pool2d(F.relu(self.conv1(x)), (2, 2)) # Max pooling over a (2, 2) window\n",
+    "        print(x.shape)\n",
+    "        x = F.max_pool2d(F.relu(self.conv2(x)), 2) # If the size is a square you can only specify a single number\n",
+    "        print(x.shape)\n",
+    "\n",
+    "        x = x.view(-1, self.num_flat_features(x))\n",
+    "        print(x.shape)\n",
+    "\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        print(x.shape)\n",
+    "\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
+    "        return F.log_softmax(x, dim=1)\n",
+    "\n",
+    "    def num_flat_features(self, x):\n",
+    "        size = x.size()[1:] # all dimensions except the batch dimension\n",
+    "        num_features = 1\n",
+    "        for s in size:\n",
+    "            num_features *= s\n",
+    "        return num_features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([100, 1, 32, 32])\n",
+      "torch.Size([100, 6, 15, 15])\n",
+      "torch.Size([100, 16, 6, 6])\n",
+      "torch.Size([100, 576])\n",
+      "torch.Size([100, 128])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "multi-target not supported at /Users/soumith/minicondabuild3/conda-bld/pytorch_1518371252923/work/torch/lib/THNN/generic/ClassNLLCriterion.c:22",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-86-459cf763f052>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 这里就体现出来动态建图了，你还可以传入其他的参数来改变网络的结构\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 得到grad，i.e.给Variable.grad赋值\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Does the update，i.e. Variable.data -= learning_rate*Variable.grad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/jtao/miniconda2/lib/python2.7/site-packages/torch/nn/functional.pyc\u001b[0m in \u001b[0;36mnll_loss\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce)\u001b[0m\n\u001b[1;32m   1050\u001b[0m         \u001b[0mweight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1051\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1052\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize_average\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduce\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1053\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mdim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1054\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnll_loss2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize_average\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduce\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: multi-target not supported at /Users/soumith/minicondabuild3/conda-bld/pytorch_1518371252923/work/torch/lib/THNN/generic/ClassNLLCriterion.c:22"
+     ]
+    }
+   ],
+   "source": [
+    "net = Net()\n",
+    "data_iter = iter(train_loader)\n",
+    "\n",
+    "# mini-batch 图像 和 标签\n",
+    "images, labels = next(data_iter)\n",
+    "\n",
+    "# create your optimizer\n",
+    "optimizer = optim.SGD(net.parameters(), lr = 0.01)\n",
+    "num_iteations = 10000\n",
+    "\n",
+    "# in your training loop:\n",
+    "for i in range(num_iteations):\n",
+    "    optimizer.zero_grad() # zero the gradient buffers，如果不归0的话，gradients会累加\n",
+    "    \n",
+    "    images, labels = next(data_iter)\n",
+    "\n",
+    "    output = net(Variable(images)) # 这里就体现出来动态建图了，你还可以传入其他的参数来改变网络的结构\\\n",
+    "    \n",
+    "    loss = F.nll_loss(output, Variable(labels).long())\n",
+    "    loss.backward() # 得到grad，i.e.给Variable.grad赋值\n",
+    "    optimizer.step() # Does the update，i.e. Variable.data -= learning_rate*Variable.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.20784314,  0.24313726,  0.29019609, ...,  0.18431373,\n",
-       "         0.18431373,  0.19607843],\n",
-       "       [ 0.21176471,  0.25490198,  0.3019608 , ...,  0.20784314,\n",
-       "         0.21568628,  0.21960784],\n",
-       "       [ 0.21960784,  0.27843139,  0.33333334, ...,  0.25882354,\n",
-       "         0.27058825,  0.27450982],\n",
-       "       ..., \n",
-       "       [ 0.29411766,  0.39607844,  0.48627451, ...,  0.39215687,\n",
-       "         0.39215687,  0.41568628],\n",
-       "       [ 0.25098041,  0.34509805,  0.42745098, ...,  0.47058824,\n",
-       "         0.47843137,  0.49803922],\n",
-       "       [ 0.19607843,  0.27843139,  0.35294119, ...,  0.52156866,\n",
-       "         0.53725493,  0.55686277]], dtype=float32)"
+       "Net(\n",
+       "  (conv1): Conv2d(1, 6, kernel_size=(5, 5), stride=(2, 2))\n",
+       "  (conv2): Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
+       "  (fc1): Linear(in_features=1600, out_features=512, bias=True)\n",
+       "  (fc2): Linear(in_features=512, out_features=128, bias=True)\n",
+       "  (fc3): Linear(in_features=128, out_features=10, bias=True)\n",
+       ")"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "images[6].numpy()[0]"
+    "net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([100, 1, 32, 32])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "images.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "output = Variable(torch.randn(10, 120).float())\n",
+    "target = Variable(torch.FloatTensor(10).uniform_(0, 120).long())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 120])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target.shape"
    ]
   },
   {
@@ -271,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
