--- a/clock_algo/digit_classification.ipynb
+++ b/clock_algo/digit_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -1344,20 +1344,14 @@
     "    desired_sz = 32\n",
     "    img = Image.open(file_path)\n",
     "    w, h = img.size\n",
-    "    print(w)\n",
-    "    print(h)\n",
     "    resize_ratio = desired_sz * 1.0 / max(w, h)\n",
-    "    print(resize_ratio)\n",
     "    img = img.resize((int(w*resize_ratio), int(h*resize_ratio)))\n",
     "    \n",
     "    #pad image to make 32x32\n",
     "    w, h = img.size\n",
-    "    print(w)\n",
-    "    print(h)\n",
     "    delta_w = desired_sz - w\n",
     "    delta_h = desired_sz - h\n",
     "    padding = (delta_w//2, delta_h//2, delta_w-(delta_w//2), delta_h-(delta_h//2))\n",
-    "    print(padding)\n",
     "    new_im = ImageOps.expand(\n",
     "        img, \n",
     "        padding\n",
@@ -1367,18 +1361,19 @@
     "    return proc_fn(new_im)\n",
     "    \n",
     "    \n",
-    "def predict_image(file_path_list, model):\n",
-    "    data = from_numpy(np.array(map(preproc_img, file_path_list)))\n",
-    "    output = model(Variable(data))\n",
+    "def predict_image(file_path, model):\n",
+    "    aa = preproc_img(file_path)\n",
+    "    c, w, h = aa.size()\n",
+    "    aa = aa.view((1, c, w, h))\n",
+    "    output = model(Variable(aa))\n",
+    "    print(output)\n",
     "    return np.argmax(output.data.numpy(), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = load('vanilla_model_epoch_60.pkl')"
@@ -1386,57 +1381,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31.999799999999997"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "38*0.8421"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38\n",
-      "35\n",
-      "0.842105263158\n",
-      "32\n",
-      "29\n",
-      "(0, 1, 0, 2)\n"
+      "Variable containing:\n",
+      "\n",
+      "Columns 0 to 5 \n",
+      "-6.0202e+01 -6.4095e+01 -8.9645e+01 -4.1389e+01 -7.1517e+01 -6.2670e-12\n",
+      "\n",
+      "Columns 6 to 9 \n",
+      "-2.5795e+01 -7.0659e+01 -6.4210e+01 -5.1431e+01\n",
+      "[torch.FloatTensor of size 1x10]\n",
+      "\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "only 1-element tensors can be converted to Python scalars",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-46b3d26ff72f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpredict_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'clocks/num4.png'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-38-9a99684e6898>\u001b[0m in \u001b[0;36mpredict_image\u001b[0;34m(file_path_list, model)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpredict_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_path_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfrom_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreproc_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_path_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m     \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/jtao/miniconda2/lib/python2.7/site-packages/torch/tensor.pyc\u001b[0m in \u001b[0;36m__float__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    399\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    400\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndimension\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 401\u001b[0;31m         raise TypeError(\"only 1-element tensors can be converted \"\n\u001b[0m\u001b[1;32m    402\u001b[0m                         \"to Python scalars\")\n\u001b[1;32m    403\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: only 1-element tensors can be converted to Python scalars"
-     ]
+     "data": {
+      "text/plain": [
+       "array([5])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_image(['clocks/num4.png'], model)"
+    "predict_image('clocks/num5.png', model)"
    ]
   },
   {
