--- a/clock_algo/digit_classification.ipynb
+++ b/clock_algo/digit_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,8 @@
     "from torch import optim, save, load, from_numpy\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "import cv2 as cv\n"
    ]
   },
   {
@@ -1333,16 +1334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from PIL import Image, ImageOps\n",
-    "def preproc_img(file_path):\n",
+    "def preproc_pil_img(img):\n",
     "    desired_sz = 32\n",
-    "    img = Image.open(file_path)\n",
     "    w, h = img.size\n",
     "    resize_ratio = desired_sz * 1.0 / max(w, h)\n",
     "    img = img.resize((int(w*resize_ratio), int(h*resize_ratio)))\n",
@@ -1359,13 +1359,24 @@
     "    \n",
     "    # gray, norm, tensor\n",
     "    return proc_fn(new_im)\n",
-    "    \n",
-    "    \n",
-    "def predict_image(file_path, model):\n",
-    "    aa = preproc_img(file_path)\n",
+    "\n",
+    "def file2tensor(file_path):\n",
+    "    aa = preproc_pil_img(Image.open(file_path))\n",
     "    c, w, h = aa.size()\n",
     "    aa = aa.view((1, c, w, h))\n",
-    "    output = model(Variable(aa))\n",
+    "    return aa\n",
+    "\n",
+    "def cv2tensor(img):\n",
+    "    if len(img.shape) > 2:\n",
+    "        img = cv.cvtColor(img,cv2.COLOR_BGR2RGB)\n",
+    "    pil_img = Image.fromarray(img)\n",
+    "    aa = preproc_pil_img(pil_img)\n",
+    "    c, w, h = aa.size()\n",
+    "    aa = aa.view((1, c, w, h))\n",
+    "    return aa\n",
+    "    \n",
+    "def predict_image(tensor, model):\n",
+    "    output = model(Variable(tensor))\n",
     "    print(output)\n",
     "    return np.argmax(output.data.numpy(), axis=1)"
    ]
@@ -1381,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1405,13 +1416,14 @@
        "array([5])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_image('clocks/num5.png', model)"
+    "tensor = file2tensor('clocks/num5.png')\n",
+    "predict_image(tensor, model)"
    ]
   },
   {
