try to retrain on cropped

--- a/PythonAPI/pycoco_play.ipynb
+++ b/PythonAPI/pycoco_play.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -363,8 +365,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from vqaTools.vqa import VQA\n",
@@ -376,17 +380,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading VQA annotations and questions into memory...\n",
-      "0:00:18.298419\n",
-      "creating index...\n",
-      "index created!\n"
+      "loading VQA annotations and questions into memory...\n"
+     ]
+    },
+    {
+     "ename": "IOError",
+     "evalue": "[Errno 2] No such file or directory: '../Question_Annotations/v2_mscoco_test2015_annotations.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-8247a4320848>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mquesFile\u001b[0m    \u001b[0;34m=\u001b[0m\u001b[0;34m'%s/Questions/%s%s_%s_%s_questions.json'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataDir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mversionType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtaskType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataSubType\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mimgDir\u001b[0m          \u001b[0;34m=\u001b[0m \u001b[0;34m'%s/images/%s/'\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataDir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataSubType\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mvqa\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mVQA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqannFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquesFile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/jtao/Documents/coco/PythonAPI/vqaTools/vqa.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, annotation_file, question_file)\u001b[0m\n\u001b[1;32m     37\u001b[0m                         \u001b[0;32mprint\u001b[0m \u001b[0;34m'loading VQA annotations and questions into memory...'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m                         \u001b[0mtime_t\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutcnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m                         \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mannotation_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m                         \u001b[0mquestions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquestion_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m                         \u001b[0;32mprint\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutcnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtime_t\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: '../Question_Annotations/v2_mscoco_test2015_annotations.json'"
      ]
     }
    ],
@@ -395,7 +408,7 @@
     "versionType ='v2_' # this should be '' when using VQA v2.0 dataset\n",
     "taskType    ='OpenEnded' # 'OpenEnded' only for v2.0. 'OpenEnded' or 'MultipleChoice' for v1.0\n",
     "dataType    ='mscoco'  # 'mscoco' only for v1.0. 'mscoco' for real and 'abstract_v002' for abstract for v1.0.\n",
-    "dataSubType ='train2014'\n",
+    "dataSubType ='test2015'\n",
     "qannFile     ='%s/Question_Annotations/%s%s_%s_annotations.json'%(dataDir, versionType, dataType, dataSubType)\n",
     "quesFile    ='%s/Questions/%s%s_%s_%s_questions.json'%(dataDir, versionType, taskType, dataType, dataSubType)\n",
     "imgDir \t\t= '%s/images/%s/' %(dataDir, dataSubType)\n",
@@ -454,7 +467,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# put all clocks into another folder\n",
@@ -675,7 +690,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -706,6 +723,95 @@
     "coco_caps.showAnns(anns)\n",
     "plt.imshow(I); plt.axis('off'); plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "dataDir\t\t='..'\n",
+    "versionType ='v2_' # this should be '' when using VQA v2.0 dataset\n",
+    "taskType    ='OpenEnded' # 'OpenEnded' only for v2.0. 'OpenEnded' or 'MultipleChoice' for v1.0\n",
+    "dataType    ='mscoco'  # 'mscoco' only for v1.0. 'mscoco' for real and 'abstract_v002' for abstract for v1.0.\n",
+    "dataSubType ='test2015'\n",
+    "qannFile     ='%s/Question_Annotations/%s%s_%s_annotations.json'%(dataDir, versionType, dataType, dataSubType)\n",
+    "quesFile    ='%s/Questions/%s%s_%s_%s_questions.json'%(dataDir, versionType, taskType, dataType, dataSubType)\n",
+    "questions = json.load(open(quesFile, 'r'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coarse = [ques for ques in questions['questions'] \n",
+    " if ques['question'].startswith('What time') \n",
+    " and 'day' not in ques['question'] and 'year' not in ques['question']]\n",
+    "fine = [ques for ques in questions['questions'] \n",
+    " if 'clock' in ques['question']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# put all clocks into another folder\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "source_folder = '%s/images/%s/'%(dataDir,dataSubType)\n",
+    "raw_clock_folder = '%s/images/%s/'%(dataDir,'test_fine_clock_vqa')\n",
+    "if not os.path.exists(raw_clock_folder):\n",
+    "    os.mkdir(raw_clock_folder)\n",
+    "# annIds = vqa.getQuesIds(quesTypes='what time', ansTypes='number');\n",
+    "# anns = vqa.loadQA(annIds)\n",
+    "for ann in fine:\n",
+    "    img_file_path = 'COCO_' + dataSubType + '_'+ str(ann['image_id']).zfill(12) + '.jpg'\n",
+    "    src_file_path = os.path.join(source_folder, img_file_path)\n",
+    "    dst_file_path = os.path.join(raw_clock_folder, img_file_path)\n",
+    "    shutil.copyfile(src_file_path, dst_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -724,7 +830,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
