--- a/clock_algo/digit_classification.ipynb
+++ b/clock_algo/digit_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,76 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
-    "import cv2 as cv\n"
+    "import cv2 as cv\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class CustomDataset(Dataset):#需要继承data.Dataset\n",
+    "    def __init__(self, data_folder):\n",
+    "        import h5py\n",
+    "        with h5py.File(os.path.join(data_folder, 'digitStruct.mat'), 'r') as f:\n",
+    "            obj = f['digitStruct']['name'][0]\n",
+    "            print(''.join(str(i) for i in obj[:]))\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        # TODO\n",
+    "        # 1. Read one data from file (e.g. using numpy.fromfile, PIL.Image.open).\n",
+    "        # 2. Preprocess the data (e.g. torchvision.Transform).\n",
+    "        # 3. Return a data pair (e.g. image and label).\n",
+    "        #这里需要注意的是，第一步：read one data，是一个data\n",
+    "        pass\n",
+    "    def __len__(self):\n",
+    "        # You should change 0 to the total size of your dataset.\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.png\n",
+      "    1:246,77,81,219\n",
+      "    9:323,81,96,219\n",
+      "2.png\n",
+      "    2:77,29,23,32\n",
+      "    3:98,25,26,32\n",
+      "3.png\n",
+      "    2:17,5,8,15\n",
+      "    5:25,5,9,15\n",
+      "4.png\n",
+      "    9:57,13,15,34\n",
+      "    3:72,13,13,34\n",
+      "5.png\n",
+      "    3:52,7,21,46\n",
+      "    1:74,10,15,46\n"
+     ]
+    }
+   ],
+   "source": [
+    "from digitStruct import *\n",
+    "dsFileName = '/Users/jtao/Downloads/train/digitStruct.mat'\n",
+    "testCounter = 0\n",
+    "for dsObj in yieldNextDigitStruct(dsFileName):\n",
+    "    testCounter += 1\n",
+    "    print(dsObj.name)\n",
+    "    for bbox in dsObj.bboxList:\n",
+    "        print(\"    {}:{},{},{},{}\".format(\n",
+    "            bbox.label, bbox.left, bbox.top, bbox.width, bbox.height))\n",
+    "    if testCounter >= 5:\n",
+    "        break"
    ]
   },
   {
@@ -1384,7 +1453,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = load('vanilla_model_epoch_60.pkl')"
